finished new code

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body onload="countDown()">
     <img src="./UATspaceLogo.jpg">
     <div>
-        <p>lift off in </p>
-        <p id="count">50</p>
+        <p>lift off in 60 seconds</p>
+        <p id="count">0</p>
     </div>
-    <script src="index.js">
+    <script src="./index.js">
 
     </script>
 </body>
